# europa1400-database

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
data/: candidates.yml  distribution.yml  drm.yml  edition.yml  executable.yml  executable_to_metadata.yml  executables.yml  language.yml  metadata_to_patch.yml  patch.yml  version.yml
data/candidates/: executables.yml  tl_executables.yml
docs/: index.md
scripts/: generate_articles.py  generate_summary.py  generate_tables.py
